# invoices-and-receipts_ocr

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: colab_eval.ipynb  load_data.ipynb
scripts/: regenerate_report.py  run_evaluation.py
src/invoice_extractor/: __init__.py  config.py  logging_config.py  pipeline.py  schemas.py
src/invoice_extractor/evaluation/: __init__.py  metrics.py  normalize.py  report.py
src/invoice_extractor/llm/: __init__.py  extractor.py  prompts.py
src/invoice_extractor/ocr/: __init__.py  base.py  paddle_engine.py  tesseract_engine.py
tests/: conftest.py  test_metrics.py  test_normalize.py  test_prompts.py  test_report.py  test_schemas.py
web/: app.py
