[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-extractor"
version = "1.0.0"
description = "End-to-end document AI pipeline: OCR -> LLM -> structured JSON, with evaluation and a Streamlit demo."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TTNamUS" }]

dependencies = [
    # Core
    "litellm>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "datasets>=2.18.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.2",
    # OCR
    "paddleocr>=2.7.3",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    # LLM providers (resolved by litellm)
    "openai>=1.30.0",
    "google-generativeai>=0.5.0",
    # Web demo
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    # CLI / utilities
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
invoice-eval = "invoice_extractor.evaluation.report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
